<resources>
    <string name="app_name">Fullprovodnici</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button1_description">Record Log</string>
    <string name="button2_description">Record Screen</string>
    <string name="button3_description">Legal Questions</string>
    <string name="text1_description">SELECT APP</string>
    <string name="btn_desc1">Desc</string>
    <string name="btn_desc2">Desc</string>
    <string name="btn_desc3">Desc</string>

</resources>