<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/record_screen1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/record_page_info" />

    <View
        android:id="@+id/backgroundView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#8283FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/button1_description"
        android:scaleType="fitCenter"
        android:padding="6dp"
        android:src="@drawable/first_button"
        app:layout_constraintBottom_toBottomOf="@id/backgroundView"
        app:layout_constraintStart_toStartOf="@id/backgroundView" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/button2_description"
        android:scaleType="fitCenter"
        android:padding="3dp"
        android:src="@drawable/second_button"
        app:layout_constraintBottom_toBottomOf="@id/backgroundView"
        app:layout_constraintStart_toEndOf="@id/button1" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/button3_description"
        android:scaleType="fitCenter"
        android:padding="6dp"
        android:src="@drawable/third_button"
        app:layout_constraintBottom_toBottomOf="@id/backgroundView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@id/button2" />

    <TextView
        android:id="@+id/label_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1_description"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintEnd_toEndOf="@id/button1"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/label_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_description"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintEnd_toEndOf="@id/button2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/label_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3_description"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintEnd_toEndOf="@id/button3"
        android:textColor="#FFFFFF" />



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cikica_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="Welcome to LegalAssist!"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="480dp"
        android:text="Your virtual legal advisor providing professional, reliable, and confidental assistance for all your legal inquiries."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextInputt"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_corners_1"
        android:hint="How can I help You?"
        android:inputType="text"

        android:paddingLeft="25dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginTop="592dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/Group28" />

</androidx.constraintlayout.widget.ConstraintLayout>